--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,8 @@
 <div class="about-main">
   <h2>Litterati Galleryとは</h2>
   <p>
-    SNSサービスです。
-    近況やつぶやきを投稿し、他のユーザーと楽しくコミュニケーションできます。
+    ポイ捨てゴミ専用の画像投稿サービスです。
+    ゴミを拾うときに写真を撮り、 。
   </p>
   <img class="about-img" src="/tweets.png">
 </div>
