--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,8 @@
   <h2>Litterati Galleryとは</h2>
   <p>
     ポイ捨てゴミ専用の画像投稿サービスです。
-    ゴミを拾うときに写真を撮り、 。
+    ゴミを拾うときに写真を撮り、オシャレに加工した画像を投稿します。
   </p>
-  <img class="about-img" src="/tweets.png">
+  <br>
+  <img class="about-img" src="/litterati_about.jpg">
 </div>
