--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,7 +29,7 @@
 
           <%= f.submit "新規登録" %>
         <% end %>
-        <%= link_to 'ログインはこちら', '#' %>
+        <%= link_to 'ログインはこちら', '/login' %>
 
       </div>
     </div>
