--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <header>
       <div class="header-logo">
         <% if @current_user %>
-          <%= link_to("Litterati Gallery", "/posts/index") %>
+          <%= link_to("Litterati Gallery", "/posts") %>
         <% else %>
           <%= link_to("Litterati Gallery", "/") %>
         <% end %>
@@ -23,7 +23,7 @@
             <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
           </li>
           <li>
-            <%= link_to("投稿一覧", "/posts/index") %>
+            <%= link_to("投稿一覧", "/posts") %>
           </li>
           <li>
             <%= link_to("新規投稿", "/posts/new") %>
