--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -20,6 +20,11 @@
       margin-bottom: 20px;
       width: 100%;
     }
+    .post-index-icon {
+        width: 35px;
+        height: 30px;
+        margin-left: 20px;
+    }
 }
 
 /* posts/show ================================ */
