--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
 <div class="main posts-index">
   <div class="container">
-    <% @posts.each do |post| %>
+    <% @favorite_posts.each do |post| %>
       <div class="posts-index-item">
         <h2 class="post-author">
           <%= post.user.name %>
         </h2>
         <%= link_to image_tag(post.image.url, {:border => '0'}), "/posts/#{post.id}" %>
-        <%= image_tag 'icons/heart-black.png', class: 'post-index-icon' %>
+          <%= image_tag 'icons/heart-black.png', class: 'post-index-icon' %>
         <p class="topic-text">
           <%= post.description %>
         </p>
