--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,11 +5,6 @@
   overflow: hidden;
   box-shadow: 0 2px 6px #c1ced7;
 
-    .post-author {
-      padding-right: 20px;
-      padding-left: 20px;
-    }
-
     .post-text {
       padding-right: 20px;
       padding-left: 20px;
@@ -24,6 +19,26 @@
         width: 35px;
         height: 30px;
         margin-left: 20px;
+    }
+
+    .post-user-image {
+      float: left;
+      width: 10%;
+    }
+
+    .post-user_image img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      box-shadow: 0 2px 6px #c1ced7;
+      object-fit: cover;
+    }
+
+    .post-user-name {
+      float: left;
+      width: 90%;
+      padding-left: 15px;
+      text-align: left;
     }
 }
 
