--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,11 +2,13 @@
   <div class="container">
     <% @posts.each do |post| %>
       <div class="posts-index-item">
-        <h2 class="post-author">
-          <%= post.user.name %>
-        </h2>
+        <div class="post-user-image">
+          <img src="<%= "/user_images/#{post.user.image_name}" %>">
+        </div>
+        <div class="post-user-name">
+          <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+        </div>
         <%= link_to image_tag(post.image.url, {:border => '0'}), "/posts/#{post.id}" %>
-        <%= image_tag 'icons/heart-black.png', class: 'post-index-icon' %>
         <p class="post-text">
           <%= post.description %>
         </p>
