--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,25 @@
 <div class="main posts-index">
   <div class="container">
     <div class="user">
+      <img src="<%= "/user_images/#{@user.image_name}" %>">
       <h2><%= @user.name %></h2>
       <p><%= @user.email %></p>
+      <p><%= @user.profile %></p>
+      <% if @user.id == @current_user.id %>
+        <%= link_to("編集", "/users/#{@user.id}/edit") %>
+        <%= link_to("削除", "/users/#{@user.id}", {method: "delete"}) %>
+      <% end %>
     </div>
 
     <% @favorite_posts.each do |post| %>
       <div class="posts-index-item">
-        <h2 class="post-author">
-          <%= post.user.name %>
-        </h2>
+        <div class="post-user-image">
+          <img src="<%= "/user_images/#{post.user.image_name}" %>">
+        </div>
+        <div class="post-user-name">
+          <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+        </div>
         <%= link_to image_tag(post.image.url, {:border => '0'}), "/posts/#{post.id}" %>
-          <%= image_tag 'icons/heart-black.png', class: 'post-index-icon' %>
         <p class="post-text">
           <%= post.description %>
         </p>
