--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,26 @@
+/*
+* Custom variables
+*/
+$main-font: 'Lato', sans-serif;
+$sub-font: 'Montserrat', sans-serif;
+$fancy-font: 'Kaushan Script', cursive;
+$font-size: 16px;
+
+$black: #000;
+$white: #FFF;
+$grey: #585c65;
+$mediumgrey: #9b9b9b;
+$lightgrey: #eeeeee;
+$blue: #3466a1;
+
+$padding: 10px;
+$margin: 10px;
+
+/*
+* Override Bootstrap variables
+*/
+$font-family-sans-serif: $main-font;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "pages";
@@ -7,6 +30,7 @@
 
 /* reset ================================ */
 * {
+  position: relative;
   box-sizing: border-box;
 }
 
@@ -57,14 +81,6 @@ body {
   height: auto;
   min-height: 100%;
   background-color: #f5f8fa;
-}
-
-.container {
-  max-width: 600px;
-  margin: 60px auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  clear: both;
 }
 
 /* ヘッダー ================================ */
