--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -129,3 +129,92 @@
   font-size: 16px;
   margin-right: 3px;
 }
+
+/* posts/intextest ================================ */
+.posts-index {
+  background: $lightgrey;
+}
+
+.post-content {
+  h3 {
+    text-transform: uppercase;
+    letter-spacing: 0.5em;
+    font-size: 12px;
+    font-weight: 700;
+    text-align: center;
+    padding: $padding*5 0;
+    color: darken($lightgrey, 20%);
+  }
+}
+
+.post-box {
+  margin: 0 0 $margin*3 0;
+  background: $white;
+  width: 100%;
+  float: left;
+
+  .post-user-data {
+    float: left;
+    width: 100%;
+    position: relative;
+
+    .post-user-image {
+      float: left;
+      padding: 10px;
+    }
+
+    .post-user-image img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      box-shadow: 0 2px 6px #c1ced7;
+      object-fit: cover;
+    }
+
+    .post-user-name {
+      float: left;
+      text-align: left;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+    }
+  }
+
+  .post-data {
+  float: left;
+  width: 100%;
+
+    .image-wrap {
+      text-align: center;
+
+      img {
+        width: 60%;
+        padding: $padding;
+
+      }
+
+      .likes {
+        position: absolute;
+        bottom: 5px;
+        left: 15px;
+        padding: $padding/2;
+        background: $black;
+        background: rgba($black, 0.4);
+        color: $white;
+      }
+    }
+    .post-description {
+      font-size: 12px;
+      color: $mediumgrey;
+      letter-spacing: 1px;
+      padding: $padding*1.5;
+      height: 75px;
+      width: 80%;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      display: inline-block;
+    }
+  }
+}
