--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,30 +4,32 @@
       <div class="form-heading">ユーザー情報の編集</div>
       <div class="form users-form">
         <div class="form-body">
-          <% @user.errors.full_messages.each do |message| %>
+          <%= form_for(resource, as: resource_name, url: user_registration_path, html: { method: :put }) do |f| %>
             <div class="form-error">
-              <%= message %>
+              <%= devise_error_messages! %>
             </div>
-          <% end %>
 
-          <%= form_for @user do |f| %>
             <div class="form-group">
               <%= f.label :ユーザー名 %>
-              <%= f.text_field :name %>
+              <%= f.text_field :name, autofocus: true, autocomplete: "email"  %>
             </div>
             <div class="form-group">
-              <%= f.label :メールアドレス %>
-              <%= f.text_field :email %>
+              <%= f.label :メールアドレス %><br />
+              <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
             </div>
+
             <div class="form-group">
               <%= f.label :プロフィール %>
-              <%= f.text_field :profile %>
+              <%= f.text_field :profile, autofocus: true, autocomplete: "email"  %>
             </div>
 
             <%= f.submit "保存" %>
           <% end %>
 
+          <%= link_to "キャンセル", :back %>
+
         </div>
+
       </div>
     </div>
   </div>
