--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,41 +8,41 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+
   </head>
 
   <body>
     <header>
       <div class="header-logo">
-        <% if @current_user %>
-          <%= link_to("Litterati Gallery", "/posts") %>
+        <% if user_signed_in? %>
+          <%= link_to "Litterati Gallery", posts_path %>
         <% else %>
-          <%= link_to("Litterati Gallery", "/") %>
+          <%= link_to "Litterati Gallery", root_path %>
         <% end %>
       </div>
       <ul class="header-menus">
-        <% if @current_user %>
+        <% if user_signed_in? %>
           <li>
-            <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
+            <%= link_to current_user.email, "/users/#{current_user.id}" %>
           </li>
           <li>
-            <%= link_to("投稿一覧", "/posts") %>
+            <%= link_to "投稿一覧", posts_path %>
           </li>
           <li>
-            <%= link_to("新規投稿", "/posts/new") %>
+            <%= link_to "新規投稿", new_post_path %>
           </li>
           <li>
-            <%= link_to("ログアウト", "/logout", {method:  :post}) %>
+            <%= link_to "ログアウト", destroy_user_session_path, {method:  :delete} %>
           </li>
         <% else %>
           <li>
-            <%= link_to("Litterati Galleryとは", "/about") %>
+            <%= link_to "Litterati Galleryとは", about_path %>
           </li>
           <li>
-            <%= link_to("新規登録", "/signup") %>
+            <%= link_to "新規登録", new_user_registration_path %>
           </li>
           <li>
-            <%= link_to("ログイン", "/login") %>
+            <%= link_to "ログイン", new_user_session_path %>
           </li>
         <% end %>
       </ul>
@@ -53,6 +53,9 @@
         <%= flash[:notice] %>
       </div>
     <% end %>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
     <%= yield %>
 
