--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,9 @@
       <h2><%= @user.name %></h2>
       <p><%= @user.email %></p>
       <p><%= @user.profile %></p>
-      <% if @user.id == @current_user.id %>
-        <%= link_to("編集", "/users/#{@user.id}/edit") %>
-        <%= link_to("削除", "/users/#{@user.id}", {method: "delete"}) %>
+      <% if @user.id == current_user.id %>
+        <%= link_to("編集", edit_user_registration_path) %>
+        <%= link_to("削除", user_registration_path, {method: "delete"}) %>
       <% end %>
     </div>
 
@@ -16,7 +16,7 @@
         <div class="post-content">
           <h3>Latest Photos</h3>
           <div class="row posts-wrap">
-            <% @favorite_posts.each do |post| %>
+            <% @user_posts.first(12).each do |post| %>
               <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                 <div class="post-box">
                   <div class="post-user-data">
@@ -24,7 +24,7 @@
                       <img src="<%= "/user_images/#{post.user.image_name}" %>">
                     </div>
                     <div class="post-user-name post-user-data-content">
-                      <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+                      <%= link_to post.user.name, "/users/#{post.user.id}" %>
                     </div>
                   </div>
                   <div class="post-data">
